[gd_scene load_steps=15 format=3 uid="uid://dp8brmv8c3epw"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_ln0mq"]
[ext_resource type="PackedScene" uid="uid://bsh80y6egouqp" path="res://features/enviro/environment.tscn" id="2_solm0"]
[ext_resource type="PackedScene" uid="uid://b7xisfiwa7e2o" path="res://features/bird/bird.tscn" id="3_q0a14"]
[ext_resource type="Texture2D" uid="uid://dvgihr1eyn2pi" path="res://scenes/main/spritesheet.png" id="4_aq7g6"]
[ext_resource type="AudioStream" uid="uid://b5eu87cacewao" path="res://scenes/main/point.ogg" id="5_6xlsu"]
[ext_resource type="Texture2D" uid="uid://deivybkqurfoe" path="res://scenes/main/message.png" id="5_phsiu"]
[ext_resource type="Texture2D" uid="uid://f442invfebg8" path="res://scenes/main/gameover.png" id="6_c7ql4"]

[sub_resource type="Animation" id="Animation_ysu5x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(90, 184)]
}

[sub_resource type="Animation" id="Animation_af5tp"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(90, 184), Vector2(90, 174), Vector2(90, 194), Vector2(90, 184)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aa4jo"]
_data = {
"RESET": SubResource("Animation_ysu5x"),
"float": SubResource("Animation_af5tp")
}

[sub_resource type="Animation" id="Animation_3yvih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tap:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GetReady:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOver:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(144, 100)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOver:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameOver:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ry6v7"]
resource_name = "game_over"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(144, 100), Vector2(144, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOver:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i6inv"]
resource_name = "hide"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tap:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GetReady:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8cs2h"]
_data = {
"RESET": SubResource("Animation_3yvih"),
"game_over": SubResource("Animation_ry6v7"),
"hide": SubResource("Animation_i6inv")
}

[node name="Main" type="Node"]
script = ExtResource("1_ln0mq")

[node name="Environment" parent="." instance=ExtResource("2_solm0")]
unique_name_in_owner = true

[node name="Bird" parent="." instance=ExtResource("3_q0a14")]
unique_name_in_owner = true
position = Vector2(90, 184)

[node name="BirdAnimations" type="AnimationPlayer" parent="Bird"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_aa4jo")
}
autoplay = "float"

[node name="Digits" type="Node" parent="."]

[node name="PointsDigit" type="Sprite2D" parent="Digits"]
unique_name_in_owner = true
position = Vector2(144, 34)
texture = ExtResource("4_aq7g6")
region_enabled = true
region_rect = Rect2(1, 1, 24, 36)

[node name="ScreenSprites" type="Node" parent="."]

[node name="Tap" type="Sprite2D" parent="ScreenSprites"]
position = Vector2(144, 201)
texture = ExtResource("5_phsiu")
region_enabled = true
region_rect = Rect2(0, 158, 184, 109)

[node name="GetReady" type="Sprite2D" parent="ScreenSprites"]
position = Vector2(144, 95)
texture = ExtResource("5_phsiu")
region_enabled = true
region_rect = Rect2(0, 95, 184, 62)

[node name="GameOver" type="Sprite2D" parent="ScreenSprites"]
visible = false
self_modulate = Color(1, 1, 1, 0)
position = Vector2(144, 100)
texture = ExtResource("6_c7ql4")

[node name="SpritesAnimations" type="AnimationPlayer" parent="ScreenSprites"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_8cs2h")
}

[node name="PointSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_6xlsu")
volume_db = -2.0
